update groupId, URL and JUnit version in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>au.edu.rmit.csit</groupId>
+  <groupId>au.edu.rmit.csit.swijadex</groupId>
   <artifactId>swi-jadex</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>swi-jadex</name>
-  <url>http://maven.apache.org</url>
+  <url>http://bitbucket.org/ssardina/swi-jadex/overview</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.10</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
